# youtube-scheduler

./: .gitignore  README.md  authenticate.py  cmds.sh  electron.vite.config.ts  main.py  package-lock.json  package.json  pyproject.toml  schedule.py  tsconfig.node.json  tsconfig.web.json  vite.renderer.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: generate-icons.mjs
src/main/: auth.ts  errors.ts  index.ts  ipc.ts  oauth-config.ts  scheduler.ts  storage.ts  youtube.ts
src/preload/: index.d.ts  index.ts
src/renderer/: index.html
src/renderer/src/: App.svelte  app.css  fixtures.ts  i18n.ts
src/shared/: schedule.ts  schemas.ts  types.ts
tests/: oauth-config.test.ts  schedule.test.ts  test_schedule.py
