[project]
name = "youtube-scheduler"
version = "0.1.0"
description = "Schedule recurring YouTube Live broadcasts."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.181.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "jsonargparse>=4.41.0",
    "tzdata>=2026.3",
]
